--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,27 @@
 }
 
 /* End Banner Area */
+
+/* Start Book Area */
+
+.site-main .book-area {
+    padding: 4rem 0;
+}
+
+.site-main .book-area h1 {
+    padding-left: 50%;
+    font-family: "Gravitas One"; 
+}
+
+
+.site-main .book-area .button-group button {
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--roboto)
+}
+
+.site-main .book-area .button-group button + button {
+    padding-left: 2rem;
+}
+
+/* End Book Area */
