--- a/contact-us/contact.css
+++ b/contact-us/contact.css
@@ -74,7 +74,7 @@ border-radius: 50%;
 font-size: 22px;
 }
 
-.container .contactInfo .box .text
+.container .contactInfo .box .text p
 {
 display: flex;
 margin-left: 20px;
@@ -86,6 +86,7 @@ font-weight: 300;
 
 .container .contactInfo .box .text h3
 {
+margin-left: 20px;
 font-weight: 500;
 color: #00bcd4
 }
@@ -94,14 +95,14 @@ color: #00bcd4
 {
 width: 40%;
 padding: 40px;
-background: #fff;
+background: rgb(240, 236, 236);
 }
 
 .contactForm h2
 {
 font-size: 30px;
 color: #333;
-font-weight: 500;
+font-weight: 700;
 }
 
 .contactForm .inputBox
@@ -111,7 +112,7 @@ width: 100%;
 margin-top: 10px;
 }
 
-.contactForm .inputBox input
+.contactForm .inputBox input,
 .contactForm .inputBox textarea
 {
 width: 100%;
